package com.example;

public interface FibonacciCalculator {
    long calculate(int n);
}
